# usual.art

./: COPYING  NEWS  README.md  configure.ac  echoe.synth.1.tar.bz2  index.html  index.theme.in  mageia.guitar.4.tar.bz2  mageia.guitar.5.tar.bz2  mageia.guitar.6.tar.bz2  mageia.light.synth.1.tar.bz2  params.json  sound-theme-echoe.synth-1-3-rosa2012.1.noarch.rpm  sound-theme-guitar-1-3-rosa2012.1.noarch.rpm  sound-theme-light.synth-1-3-rosa2012.1.noarch.rpm
Pictures/: .oeai.deviantart.com.
Sound.Theme.Light.Synth/: AUTHORS
Sound.Theme.Light.Synth/stereo/: Makefile.am
Sound.Theme.Mageia.Guitar/: Makefile.am  README  configure.ac  user-install-sh
Sound.Theme.Mageia.Guitar/stereo/: Makefile.am  Makefile.am~
Sound.Theme/Echoe.Synth.1/: Makefile.am  README  configure.ac  configure.ac~  index.theme.in
Sound.Theme/Echoe.Synth.1/stereo/: Makefile.am
Sound.Theme/Light.Synth/: NEWS  README  index.theme.in
Sound.Theme/Light.Synth/stereo/: Makefile.am
Sound.Theme/Mageia.Guitar/: CREDITS  configure.ac  index.theme.in
Sound.Theme/Mageia.Guitar/stereo/: Makefile.am
install_scripts/: CREDITS
install_scripts/pure_install/: AUTHORS  ChangeLog
install_scripts/rpm_build/: COPYING  Makefile.am  NEWS  README  configure.ac  index.theme.in  user-install-sh
install_scripts/rpm_build/po/: Makefile.in.in
install_scripts/rpm_build/stereo/: Makefile.am
lmms/: mage3.echoe.synth.addon.mmpz  mage3.echoe.synth.mmpz  mageia.light.synth.bundle.mmpz  mageia.light.synth.call.mmpz  mageia.light.synth.system.ready.mmpz
lmms/logo/blender/: HeadPhonesLms.blend  HeadPhonesLms.blend1  HeadPhonesLms.blend2  HeadPhonesLms.stl  HeadPhonesLmsG.blend  HeadPhonesLmsG1.blend  HeadPhonesLmsG2.blend  HeadPhonesLmsG3.blend  HeadPhonesLmsG4.blend  HeadPhonesLmsGb.blend  HeadPhonesLmsGh.blend
stereo/: Makefile.am
