
AC_PREREQ([2.60])

AC_INIT([sound-theme-mageia.echoe.synth.1],
        [1],
        [https://forums.mageia.org/en/viewtopic.php?t=4038])

AC_CONFIG_SRCDIR([index.theme.in])

AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

AC_SUBST(VERSION)

THEME_NAME=mageia.echoe.synth.1
AC_SUBST(THEME_NAME)
AC_DEFINE_UNQUOTED(THEME_NAME,"$THEME_NAME")

IT_PROG_INTLTOOL([0.40.0])
GETTEXT_PACKAGE=sound-theme-$THEME_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AM_GLIB_GNU_GETTEXT

AC_PROG_LN_S

ENABLE_KDE_HACK=yes
ENABLE_FREEDESKTOP_HACK=yes

AC_SUBST(ENABLE_KDE_HACK)
AC_SUBST(ENABLE_FREEDESKTOP_HACK)
AC_DEFINE_UNQUOTED(ENABLE_KDE_HACK,"$ENABLE_KDE_HACK")
AC_DEFINE_UNQUOTED(ENABLE_FREEDESKTOP_HACK,"$ENABLE_FREEDESKTOP_HACK")

AC_CONFIG_FILES([
Makefile
stereo/Makefile
po/Makefile.in
])

AC_OUTPUT
