NULL =
themefoldername = $(GETTEXT_PACKAGE)
sounddir = $(instdir)/stereo
sound_DATA =                            \
	alarm-clock-elapsed.ogg	        \
	audio-channel-front-center.ogg	\
	audio-channel-front-left.ogg	\
	audio-channel-front-right.ogg	\
	audio-channel-rear-center.ogg	\
	audio-channel-rear-left.ogg	\
	audio-channel-rear-right.ogg	\
	audio-channel-side-left.ogg	\
	audio-channel-side-right.ogg	\
	audio-test-signal.ogg		\
	audio-volume-change.ogg		\
	bell.ogg			\
	camera-shutter.ogg		\
	complete.ogg			\
	desktop-login.ogg		\
	desktop-logout.ogg		\
	device-added.ogg		\
	device-removed.ogg		\
	dialog-information.ogg		\
	dialog-warning.ogg		\
	dialog-error.ogg		\
	message.ogg			\
	message-new-instant.ogg		\
	network-connectivity-established.ogg	\
	network-connectivity-lost.ogg		\
	phone-incoming-call.ogg		\
	phone-incoming-call-short.ogg\
	phone-outgoing-busy.ogg		\
	phone-outgoing-calling.ogg      \
	power-plug.ogg			\
	power-unplug.ogg		\
	screen-capture.ogg		\
	service-login.ogg		\
	service-logout.ogg		\
	suspend-error.ogg		\
	system-ready.ogg		\
	screen-capture1.ogg		\
	trash-empty.ogg			\
	window-attention.ogg		\
	window-question.ogg		\
	addon-1.ogg			\
	addon-2.ogg			\
	addon-3.ogg			\
	addon-4.ogg			\
	$(NULL)


#	-rm -f $(DESTDIR)$(sounddir)/power-plug.ogg
#	$(LN_S) device-added.ogg $(DESTDIR)$(sounddir)/power-plug.ogg
#	-rm -f $(DESTDIR)$(sounddir)/power-unplug.ogg
#	$(LN_S) device-removed.ogg $(DESTDIR)$(sounddir)/power-unplug.ogg
#	-rm -f $(DESTDIR)$(sounddir)/network-connectivity-established.ogg
#	$(LN_S) device-added.ogg $(DESTDIR)$(sounddir)/network-connectivity-established.ogg
#	-rm -f $(DESTDIR)$(sounddir)/network-connectivity-lost.ogg
#	$(LN_S) device-removed.ogg $(DESTDIR)$(sounddir)/network-connectivity-lost.ogg
#	-rm -f $(DESTDIR)$(sounddir)/screen-capture.ogg
#	$(LN_S) camera-shutter.ogg $(DESTDIR)$(sounddir)/screen-capture.ogg
#	-rm -f $(DESTDIR)$(sounddir)/dialog-error.ogg
#	$(LN_S) dialog-warning.ogg $(DESTDIR)$(sounddir)/dialog-error.ogg
#	-rm -f $(DESTDIR)$(sounddir)/window-attention.ogg
#	$(LN_S) dialog-warning.ogg $(DESTDIR)$(sounddir)/window-attention.ogg
#	-rm -f $(DESTDIR)$(sounddir)/window-question.ogg
#	$(LN_S) dialog-warning.ogg $(DESTDIR)$(sounddir)/window-question.ogg
EXTRA_DIST = \
	$(sound_DATA)	\
	$(NULL)

DISTCLEANFILES = \
	$(NULL)

MAINTAINERCLEANFILES =		\
	*~			\
	Makefile.in		\
	$(NULL)
